<resources>
    <string name="app_name">Money Manager</string>
    <string name="action_settings">Settings</string>
    <string name="page_title">Budgets</string>
    <string name="budget_name">Budget Name:</string>
    <string name="enter_a_name">Enter a Name</string>
    <string name="starting_budget">Initial Budget:</string>
    <string name="new_budget">New Budget</string>
    <string name="percent_sign_small">%</string>
    <string name="dollarSignSmall">$</string>
    <string name="partition_into_paycheck">Partition into Paycheck</string>
    <string name="switch_partition_basis">Switch Partition Basis</string>
    <string name="amount_of_paycheck">Amount of Paycheck:</string>
    <string name="enter_a_value">Enter a Value</string>
    <string name="_0_00">0.00</string>
    <string name="switch_to_amount_based">Switch to Amount-Based</string>
    <string name="trash_image">trash image</string>
    <string name="rename_description">edit image</string>
    <string name="create_new_budget">Create New Budget</string>
    <string name="quick_deposit_1">$20</string>
    <string name="quick_deposit_2">$10</string>
    <string name="quick_deposit_3">$5</string>
    <string name="quick_withdraw_1">$20</string>
    <string name="quick_withdraw_2">$10</string>
    <string name="quick_withdraw_3">$5</string>
    <string name="deposit_title">Deposit</string>
    <string name="withdraw_title">Withdraw</string>
    <string name="edit_title">Edit Budget</string>
    <string name="preference_file_key">c.giles.budgetappv11.PREFERENCE_FILE_KEY</string>
    <string name="paycheck_btn_text">Log Paycheck</string>
    <string name="log_paycheck_title">Log Paycheck</string>
    <string name="value_entry_hint">Enter a Value ($)</string>
    <string name="quick_pay_text_1">$25</string>
    <string name="quick_pay_text_2">$20</string>
    <string name="quick_pay_text_3">$10</string>
    <string name="default_budget_name">Other Savings</string>
    <string name="withdraw_btn_text">-</string>
    <string name="zero_dollars">$0.00</string>
    <string name="deposit_btn">+</string>
    <string name="deposit_btn_text">+</string>
    <string name="total_funds">Total Funds:</string>
    <string name="action_edit_string">Edit Mode</string>
    <string name="settings_title">Settings</string>
    <string name="set_quick_deposit_amounts">Set Quick-Deposit Amounts</string>
    <string name="deposit_3">Deposit 3:</string>
    <string name="deposit_1">Deposit 1:</string>
    <string name="paycheck_1">Paycheck 1:</string>
    <string name="paycheck_3">Paycheck 3:</string>
    <string name="set_quick_pay_amounts">Set Quick-Pay Amounts</string>
    <string name="set_quick_withdraw_amounts">Set Quick-Withdraw Amounts</string>
    <string name="withdrawal_1">Withdrawal 1:</string>
    <string name="withdrawal_2">Withdrawal 2:</string>
    <string name="deposit_2">Deposit 2:</string>
    <string name="withdrawal_3">Withdrawal 3:</string>
    <string name="paycheck_2">Paycheck 2:</string>
    <string name="enter_an_amount">Enter an Amount ($)</string>
    <string name="save">Save</string>
    <string name="budget_name_label">Budget Name:</string>
    <string name="set_default_budget_name">Set Default Budget Name</string>
    <string name="initial_money_hint">Enter Initial $</string>
    <string name="switch_to_percent_based">Switch to Percent-Based</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="dollar_sign">$</string>
    <string name="budget_create_title">Create a New Budget</string>
    <string name="value">Value</string>
    <string name="toggle_partition_basis">Toggle Partition Basis</string>
    <string name="history_trends_title"><![CDATA[History & Trends]]></string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="history">History</string>
    <string name="clear_history">Clear History</string>
    <string name="trends">Trends</string>
    <string name="pick_a_color">Pick a Color</string>
    <string name="color_preview_label">Color Preview:</string>
    <string name="done">Done</string>

</resources>
