<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/depositLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/depositTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" Deposit Amount:"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/amountBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:visibility="visible"
            tools:text="Enter an Amount ($)" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quickDepositButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quick_deposit_1" />

            <Button
                android:id="@+id/quickDepositButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quick_deposit_2" />

            <Button
                android:id="@+id/quickDepositButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quick_deposit_3" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>