<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_title"
        android:textSize = "25sp"
        android:textStyle = "bold"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Name:    "
                android:textSize="16sp" />

            <EditText
                android:id="@+id/renameEntryBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="Enter a New Name"
                android:inputType="textPersonName"
                android:textSize="15sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Switch
            android:id="@+id/editPartitionSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Partition into Paycheck    " />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Amount of Paycheck:" />

                <TextView
                    android:id="@+id/editDollarSignSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dollarSignSmall"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/editPartitionValue"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Value"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/editPercentSignSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/percent_sign_small"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <ToggleButton
                android:id="@+id/editPartitionToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="ToggleButton"
                android:textOff="@string/switch_to_amount_based"
                android:textOn="Switch to Percent-Based"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>